# write_a_rust_os

./: Cargo.toml  README.md  notes.md
src/: main.rs  vga_buffer.rs
