[package]
name = "blog_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.0"
volatile = "0.2.3"
spin = "0.9.4"


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# 使用`cargo build`编译时需要的配置
[profile.dev]
panic = "abort"


# 使用`cargo build --release`编译时需要的配置
[profile.release]
panic = "abort"
